# saturn-mojozork

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  makefile  mojozork.c  multizorkd.c
.github/workflows/: full-image.yml  release.yml
.run/: Start.run.xml  clean.run.xml  compile.run.xml  run_with_medanfen.run.xml
docker/: Dockerfile  README.md  docker-compose.yml
docs/fork-setup/: SETUP.md  clean.bat  compile.bat  gitignore
docs/superpowers/plans/: 2026-07-03-mojozork-saturn-port.md  2026-07-08-mojozork-saturn-multizork-telnet.md  2026-07-08-multizork-libmultizork-zork1.md  2026-07-11-lurking-horror-sound.md  2026-07-13-dynamic-room-audio.md  2026-07-14-sound-options.md  2026-07-16-saturn-client-polish.md  2026-07-17-asset-scripts-and-build-workflows.md  2026-07-17-title-screen-background-image.md  2026-07-18-display-options.md  2026-07-18-menu-chrome-and-display-fixes.md  2026-07-18-png-tga-build.md  2026-07-19-boxed-menus-and-numbered-selection.md  2026-07-19-main-modularization.md  2026-07-21-netbin-build.md  2026-07-23-doc-audit.md
docs/superpowers/specs/: 2026-07-03-mojozork-saturn-port-design.md  2026-07-08-mojozork-saturn-multizork-telnet-design.md  2026-07-08-multizork-any-z3-shared-world-design.md  2026-07-11-lurking-horror-sound-design.md  2026-07-13-dynamic-room-audio-design.md  2026-07-14-sound-options-design.md  2026-07-16-saturn-client-polish-design.md  2026-07-17-asset-scripts-and-build-workflows-design.md  2026-07-17-title-screen-background-image-design.md  2026-07-18-display-options-design.md  2026-07-18-menu-chrome-and-display-fixes-design.md  2026-07-18-png-tga-build-design.md  2026-07-19-boxed-menus-and-numbered-selection-design.md  2026-07-19-main-modularization-design.md  2026-07-21-cd-audio-and-track-selector-fixes-design.md  2026-07-21-netbin-build-design.md
saturn/: .gitignore  .gitlab-ci.yml  compile-netbin.bat  compile.bat  makefile  mojozork-sdl3.c  mojozork.c  multizorkd.c  post.makefile  pre.makefile  run_with_mednafen.bat  sgl-netbin.linker  syntax-check.sh
saturn/.superpowers/sdd/: display-fix-guard-report.md
saturn/cd/data/: HOUSE.TGA
saturn/cd/music/: .gitignore
saturn/cd/music2/: Zork I - The Great Underground Empire (Japan) [25].wav.raw  tracklist
saturn/game-licenses/: README.md
saturn/src/: app_state.cxx  console_view.cxx  console_view.h  display.c  display.h  game_titles.c  game_titles.h  input.cxx  keyboard.c  keyboard.h  main.cxx  menu_layout.c  menu_layout.h  menu_pages.cxx  menu_pages.h  mojozork_saturn.c  music.c  music.h  music_cdda.cxx  music_data.c  netbin_blobs.c  netbin_blobs.h  netbin_sound.cxx  netbin_sound.h  online.h  options.cxx  puff.c  puff.h  saturn_backup.cxx  saturn_backup.h  saturn_glue.h  saturn_keyboard.cxx  saturn_keyboard.h  save_ui.cxx  save_ui.h  soft_reset.h  sound.cxx  sound.h  sound_blorb.c  sound_blorb.h  (+11 more)
saturn/src/engine/: app_state.cxx  app_state.h  mojozork_saturn.c  saturn_compat.cxx  saturn_compat.h  saturn_filestub.c  saturn_glue.cxx  saturn_glue.h  soft_reset.cxx  soft_reset.h
saturn/src/input/: input.cxx  input.h  keyboard.c  keyboard.h  saturn_keyboard.cxx  saturn_keyboard.h  typeahead.c  typeahead.h  typeahead_extract.c  typeahead_extract.h  typeahead_solution.c  typeahead_solution.h
saturn/src/menu/: game_catalog.cxx  game_catalog.h  game_titles.c  game_titles.h  menu.cxx  menu.h  menu_layout.c  menu_layout.h  menu_pages.cxx  menu_pages.h  options.h  save_ui.cxx  save_ui.h
saturn/src/net/: modem.h  net_connect.c  net_connect.h  online.cxx  saturn_uart16550.h  term.c  term.h  transport_uart.c  transport_uart.h
saturn/src/sound/: music.c  (+7 more)
saturn/tests/: test_console.c  test_display.c  test_keyboard.c  test_menu_layout.c  test_netbin_blobs.c  test_term.c  test_term_fixture.c
src/: console.c  console.h  keyboard.c  keyboard.h  main.cxx  mojozork_saturn.c  saturn_compat.cxx  saturn_compat.h  saturn_filestub.c  saturn_glue.h  saturn_keyboard.cxx  saturn_keyboard.h  term.c  term.h
src/net/: cui_transport.h  net_connect.c  net_connect.h  transport_uart.c
test/: main.c  music_mix_test.c  music_test.c  solution_overlay_test.c  sound_blorb_test.c  typeahead_abbrev_test.c  typeahead_mode_test.c  typeahead_rank_test.c
tests/: .gitignore  test_console.c  test_keyboard.c  test_term_fixture.c
tests/net/: mock_transport.c  test_mock_transport.c  transport_tcp.c
tools/: convert-backgrounds.sh  gen_blob.py  make_house_tga.py  make_tga.py  requirements.txt
tools/assets/: .gitignore  CONFIG.ME  CONFIG.NETLINK.ME  Matched  README.md  VERSIONS.ndjson  games.bat  music.bat  update.bat
tools/gametitles/: gen_titles.py
tools/tests/: test_make_tga.py
tools/typeahead/: README.md  filter_win.py  gen_all.ps1  gen_solution.py  gen_typeahead.py  zork1_walkthrough.txt
(+62 files in other folders)
